--- a/8.Modal/index.html
+++ b/8.Modal/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Color Generator</title>
+    <title>Let's Create a Model</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
@@ -13,19 +13,42 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col text-center">
-                <h1>Random Color Generator</h1>
-                <div class="shadow lg p-5 my-3">
-                    <h5 class="my-4" id="randColor"></h5>
-                    <div class="btn-group">
-                        <button class="btn btn-primary"><i class="bi bi-arrow-clockwise"></i>Generator Color</button>
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col text-center">
+                    <h1>Let's Create a Model</title>
+                    </h1>
+                    <div class="lg p-5 my-3">
+                        <div class="btn-group">
+                            <button class="button">Model Popup</button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
+
+    <section id="modal">
+        <div class="container">
+            <div class="modal-container shadow-lg p-5 text-center d-flex">
+                <div>
+                    <h1>Hello World</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis aperiam labore non? Aut
+                        voluptatum possimus hic neque, dolore magnam in sed vel voluptatibus ea voluptas molestias eos
+                        explicabo omnis? Vitae ad dicta minus ipsam illum! Facere doloribus ab illo iusto voluptas, amet
+                        perspiciatis consectetur assumenda. Est sit laborum hic dolorum.
+                    </p>
+                </div>
+                <div>
+                    <button type="button" class="ml-2 mb-1 close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            </div>
+          </div>
+        </div>
+    </section>
 
     <script src="./index.js"></script>
 </body>
