--- a/21.BookList/index.html
+++ b/21.BookList/index.html
@@ -29,7 +29,7 @@
                                 <label for="year">Year</label>
                                 <input type="number" name="year" class="input-feild" placeholder="Enter your Name">
                             </div>
-                            <button class="button my-1">Submit</button>
+                            <input class="button my-1" type="submit" value="Submit">/>
                         </form>
                     </div>
                 </div>
